--- a/documents.html
+++ b/documents.html
@@ -323,8 +323,7 @@ Télécharger <span>6,2 Mo</span></button>
 <section class="AutresDocs">
   <h2>Autres documents</h2>
   <ul>
-    <li>Longévité, cahier d’AXA n°1
-      <a href="">
+    <li><a href=""><p class="titreDoc">Longévité, cahier d’AXA n°1</p>
         <svg class="hexagon"
         xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -346,18 +345,17 @@ Télécharger <span>6,2 Mo</span></button>
         </svg>
       </span>
     </svg>
-  </a>
 <span>703 Ko</span>
+</a>
 </li>
-<li>Retraite, cahier d’AXA n°2
-  <a href="">
+<li><a href=""><p class="titreDoc">Retraite, cahier d’AXA n°2</p>
     <svg class="hexagon"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     width="33px" height="40px">
     <path fill-rule="evenodd"  stroke="rgb(231, 150, 85)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
     d="M30.998,28.896 L16.017,37.912 L1.019,28.927 L1.002,10.924 L15.983,1.908 L30.981,10.894 L30.998,28.896 Z"/>
-    <span>
+    <span class="fleche">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="15" viewBox="0 0 10 15">
         <metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
           <x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
@@ -372,18 +370,17 @@ Télécharger <span>6,2 Mo</span></button>
     </svg>
   </span>
 </svg>
-</a>
 <span>2,3 Mo</span>
+</a>
 </li>
-<li>Dépendance, cahier d’AXA n°3
-  <a href="">
+<li><a href=""><p class="titreDoc">Dépendance, cahier d’AXA n°3</p>
     <svg class="hexagon"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     width="33px" height="40px">
     <path fill-rule="evenodd"  stroke="rgb(231, 150, 85)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
     d="M30.998,28.896 L16.017,37.912 L1.019,28.927 L1.002,10.924 L15.983,1.908 L30.981,10.894 L30.998,28.896 Z"/>
-    <span>
+    <span class="fleche">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="15" viewBox="0 0 10 15">
         <metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
           <x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
@@ -398,18 +395,17 @@ Télécharger <span>6,2 Mo</span></button>
     </svg>
   </span>
 </svg>
-</a>
 <span>1,3 Mo</span>
+</a>
 </li>
-<li>Risques climatiques, cahier d’AXA n°4
-  <a href="">
+<li><a href=""><p class="titreDoc">Risques climatiques, cahier d’AXA n°4</p>
     <svg class="hexagon"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     width="33px" height="40px">
     <path fill-rule="evenodd"  stroke="rgb(231, 150, 85)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
     d="M30.998,28.896 L16.017,37.912 L1.019,28.927 L1.002,10.924 L15.983,1.908 L30.981,10.894 L30.998,28.896 Z"/>
-    <span>
+    <span class="fleche">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="15" viewBox="0 0 10 15">
         <metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
           <x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
@@ -424,18 +420,18 @@ Télécharger <span>6,2 Mo</span></button>
     </svg>
   </span>
 </svg>
-</a>
 <span>1,7 Mo</span>
+</a>
 </li>
-<li>Rejoignez le Cercle des actionnaires AXA
-  <a href="">
+<li><a href=""><p  class="titreDoc">Rejoignez le Cercle des actionnaires AXA</p>
+
     <svg class="hexagon"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     width="33px" height="40px">
     <path fill-rule="evenodd"  stroke="rgb(231, 150, 85)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
     d="M30.998,28.896 L16.017,37.912 L1.019,28.927 L1.002,10.924 L15.983,1.908 L30.981,10.894 L30.998,28.896 Z"/>
-    <span>
+    <span class="fleche">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="15" viewBox="0 0 10 15">
         <metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
           <x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
@@ -450,19 +446,17 @@ Télécharger <span>6,2 Mo</span></button>
     </svg>
   </span>
 </svg>
-</a>
 <span>2,7 Mo</span>
+</a>
 </li>
-<li>Devenez actionnaire au nominatif pur AXA
-  
-  <a href="">
-    <svg class="hexagon"
+<li><a href=""><p class="titreDoc">Devenez actionnaire au nominatif pur AXA</p>
+    <p class="bouton"><svg class="hexagon"
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     width="33px" height="40px">
     <path fill-rule="evenodd"  stroke="rgb(231, 150, 85)" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none"
     d="M30.998,28.896 L16.017,37.912 L1.019,28.927 L1.002,10.924 L15.983,1.908 L30.981,10.894 L30.998,28.896 Z"/>
-    <span>
+    <span class="fleche">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10" height="15" viewBox="0 0 10 15">
         <metadata><?xpacket begin="﻿" id="W5M0MpCehiHzreSzNTczkc9d"?>
           <x:xmpmeta xmlns:x="adobe:ns:meta/" x:xmptk="Adobe XMP Core 5.6-c138 79.159824, 2016/09/14-01:09:01        ">
@@ -475,9 +469,11 @@ Télécharger <span>6,2 Mo</span></button>
     </svg>
   </span>
 </svg>
-</a>
 <span>2,5 Mo</span>
+</p>
+</a>
 </li>
+
 </ul>
 </section>
 </main>
