--- a/index.html
+++ b/index.html
@@ -13,21 +13,61 @@
     <meta name="copyright" content="© 2017 AXA" />
     <meta name="robots" content="All" />
     <title>AXA - réinventons notre métier</title>
+    <link rel="stylesheet" href="assets/css/common/normalize.css">
     <link rel="stylesheet" href="assets/css/pages/index.css">
+
   </head>
   <body>
     <header class="header-nav">
       <div class="burger-menu">
-
       </div>
-      <img src="assets/img/common/Logo.png" class="img-header"/>
+      <div class="img-header">
+        <img src="assets/img/common/Logo.png" class="img-header"/>
+      </div>
       <div class="text-header">
         <p class="hidden-text-header">regards</p>
         <p class="hidden-text-header">sur</p>
         <p>2014</p>
       </div>
     </header>
-    <main class="main-page">
+    <main >
+      <div id="bg">
+
+        <nav class="nav-polygon">
+          <ul class="ul-polygon">
+            <li>
+              <svg viewBox="0 0 322.031 279.031">
+              	<path id="polygone1" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+            <li>
+              <svg viewBox="0 0 322.031 279.031">
+                <path id="polygone2" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+            <li>
+              <svg viewBox="0 0 322.031 279.031">
+                <path id="polygone3" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+            <li>
+              <svg viewBox="0 0 322.031 279.031">
+                <path id="polygone4" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+            <li>
+              <svg viewBox="0 0 322.031 279.031">
+                <path id="polygone5" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+            <li>
+              <svg width="160" height="140" viewBox="0 0 322.031 279.031">
+                <path id="polygone6" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              </svg>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
     </main>
     <footer>
