--- a/strategy.html
+++ b/strategy.html
@@ -24,10 +24,8 @@
 
     <nav></nav>
 
-    <main>
-
+    <main class="strategy">
       <h1 class="title">Stratégie Ambition AXA</h1>
-
       <section>
         <h2 class="subtitle">Devenir la société préférée de notre secteur</h2>
 
@@ -114,6 +112,30 @@
           </div>
           <p>+5% à +10% /an de croissance du résultat opérationnel sur 5 ans</p>
         </div>
+        <div class="objectif-1">
+          <ul>
+            <li>
+              <h1>1,57</h1>
+              <span>2010</span>
+            </li>
+            <li>
+              <h1>1,57</h1>
+              <span>2011</span>
+            </li>
+            <li>
+              <h1>1,57</h1>
+              <span>2012</span>
+            </li>
+            <li>
+              <h1>1,57</h1>
+              <span>2013</span>
+            </li>
+            <li>
+              <h1>XX</h1>
+              <span>2014</span>
+            </li>
+          </ul>
+        </div>
 
         <div class="infos">
           <div class="svg-container">
@@ -123,6 +145,30 @@
             <img src="assets/img/strategy/euro.png" alt="euro" class="euro"/>
           </div>
           <p>24 Mds € cumulés de cash-flow opérationnel disponibles pour 2015 <span>(en 15 milliards d'euros)</span></p>
+        </div>
+        <div class="objectif-2">
+          <ul>
+            <li>
+              <h1>3,7</h1>
+              <span>2010</span>
+            </li>
+            <li>
+              <h1>4,2</h1>
+              <span>2011</span>
+            </li>
+            <li>
+              <h1>4,7</h1>
+              <span>2012</span>
+            </li>
+            <li>
+              <h1>5,2</h1>
+              <span>2013</span>
+            </li>
+            <li>
+              <h1>XX</h1>
+              <span>2014</span>
+            </li>
+          </ul>
         </div>
 
         <div class="infos">
@@ -135,6 +181,30 @@
           </div>
           <p>13% à 15% de rentabilité courante des capitaux propres sur 5 ans <span>(ROE courant)</span></p>
         </div>
+        <div class="objectif-3">
+          <ul>
+            <li>
+              <h1>12%</h1>
+              <span>2010</span>
+            </li>
+            <li>
+              <h1>10,0%</h1>
+              <span>2011</span>
+            </li>
+            <li>
+              <h1>13,3%</h1>
+              <span>2012</span>
+            </li>
+            <li>
+              <h1>14,8%</h1>
+              <span>2013</span>
+            </li>
+            <li>
+              <h1>XX</h1>
+              <span>2014</span>
+            </li>
+          </ul>
+        </div>
 
         <div class="infos">
           <div class="svg-container">
@@ -145,6 +215,31 @@
           </div>
           <p> 25% de ratio d’endettement pour 2015 .</p>
         </div>
+        <div class="objectif-4">
+          <ul>
+            <li>
+              <h1>28%</h1>
+              <span>2010</span>
+            </li>
+            <li>
+              <h1>26%</h1>
+              <span>2011</span>
+            </li>
+            <li>
+              <h1>26%</h1>
+              <span>2012</span>
+            </li>
+            <li>
+              <h1>24%</h1>
+              <span>2013</span>
+            </li>
+            <li>
+              <h1>XX</h1>
+              <span>2014</span>
+            </li>
+          </ul>
+        </div>
+
       </section>
 
     </main>
