--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>AXA - réinventons notre métier</title>
     <link rel="stylesheet" href="assets/css/common/normalize.css">
     <link rel="stylesheet" href="assets/css/pages/index.css">
-
+    <script src="assets/js/script.js" type="text/javascript"></script>
   </head>
   <body>
     <header class="header-nav">
