--- a/index.html
+++ b/index.html
@@ -12,63 +12,141 @@
     <meta name="language" content="FR" />
     <meta name="copyright" content="© 2017 AXA" />
     <meta name="robots" content="All" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>AXA - réinventons notre métier</title>
     <link rel="stylesheet" href="assets/css/common/normalize.css">
     <link rel="stylesheet" href="assets/css/pages/index.css">
 
   </head>
   <body>
-    <header class="header-nav">
-      <div class="burger-menu">
-      </div>
-      <div class="img-header">
-        <img src="assets/img/common/Logo.png" class="img-header"/>
-      </div>
-      <div class="text-header">
-        <p class="hidden-text-header">regards</p>
-        <p class="hidden-text-header">sur</p>
-        <p>2014</p>
-      </div>
-    </header>
-    <main >
+  <header>
+    <div class="barInfo">
+      <p>En poursuivant votre navigation sur ce site, vous acceptez
+        l’utilisation de cookies pour réaliser
+        des statistiques de visites et vous proposer du contenu ciblé.
+        <span class="closeButton">
+        <svg class="cercle"
+       xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       width="63px" height="63px">
+      <path fill-rule="evenodd"  stroke-width="4px" stroke="rgb(0, 0, 0)" fill-opacity="0" opacity="0.102" fill="rgb(129, 129, 129)"
+       d="M31.500,8.000 C44.479,8.000 55.000,18.521 55.000,31.500 C55.000,44.479 44.479,55.000 31.500,55.000 C18.521,55.000 8.000,44.479 8.000,31.500 C8.000,18.521 18.521,8.000 31.500,8.000 Z"
+       style="stroke: #284591;opacity: 1.102;"/>
+      </svg>
+      <svg class="croix"
+       xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       width="15px" height="15px">
+      <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+       d="M14.725,1.721 L1.720,14.726 L0.275,13.281 L13.279,0.276 L14.725,1.721 Z"/>
+      </svg>
+      <svg class="croix"
+       xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       width="15px" height="15px">
+      <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+       d="M1.720,0.276 L14.725,13.280 L13.280,14.725 L0.275,1.720 L1.720,0.276 Z"/>
+      </svg>
+      </span>
+      </p>
+    </div>
+    <div class="menu">
+    <span class="logo"> <img src="assets/img/common/logo.png"></span>
+    <span class="regards"> 2014 </span>
+    <!-- <p class="regards">regard <br>sur <br><span >2014</span></p> -->
+    <nav class="main-nav">
+        <input type="checkbox" class="menu-toggler" id="menu-toggler" aria-hidden="true">
+        <label for="menu-toggler" class="menu-toggler__label" aria-hidden="true">
+            <span class="menu-toggler__label__text">Menu</span>
+            <span class="menu-toggler__label__visual">
+                <span></span>
+                <span></span>
+                <span></span>
+            </span>
+        </label>
+
+        <ul class="main-menu">
+            <li><a href="#">Un</a></li>
+            <li><a href="#">Item</a></li>
+            <li><a href="#">De</a></li>
+            <li><a href="#">Mon</a></li>
+            <li><a href="#">Menu</a></li>
+        </ul>
+    </nav>
+  </div>
+</header>
+
+    <main>
       <div id="bg">
-
-        <nav class="nav-polygon">
-          <ul class="ul-polygon">
+          <ul class="polygon">
             <li>
-              <svg viewBox="0 0 322.031 279.031">
-              	<path id="polygone1" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              <span class="contentSVG">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="323.046px" height="280.046px">
+                <path id="polygone1" fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+                d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
+                </svg>
+                <p>mot du président</p>
+              </span>
+            </li>
+            <li>
+              <span class="contentSVG">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="323.046px" height="280.046px">
+                <path id="polygone2" fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+                d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
+                </svg>
+                <p>stratégie <br>Ambition AXA</p>
+              </span>
+            </li>
+            <li>
+              <span class="contentSVG">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="323.046px" height="280.046px">
+                <path id="polygone3" fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+                d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
+                </svg>
+                <p>engagés pour  mieux protéger</p>
+              </span>
+            </li>
+            <li>
+              <span class="contentSVG">
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="323.046px" height="280.046px">
+                <path id="polygone4" fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+                d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
+                </svg>
+                <p>chiffres clés</p>
+              </span>
+            </li>
+            <!-- <li>
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="323.046px" height="280.046px">
+              <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+              d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
               </svg>
             </li>
             <li>
-              <svg viewBox="0 0 322.031 279.031">
-                <path id="polygone2" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
+              <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="323.046px" height="280.046px">
+              <path fill-rule="evenodd"  stroke="rgb(255, 255, 255)" stroke-width="2.031px" stroke-linecap="butt" stroke-linejoin="miter" fill-opacity="0.251" fill="rgb(41, 41, 41)"
+              d="M81.156,278.021 L1.024,139.677 L80.885,1.177 L240.877,1.021 L321.009,139.365 L241.148,277.865 L81.156,278.021 Z"/>
               </svg>
-            </li>
-            <li>
-              <svg viewBox="0 0 322.031 279.031">
-                <path id="polygone3" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
-              </svg>
-            </li>
-            <li>
-              <svg viewBox="0 0 322.031 279.031">
-                <path id="polygone4" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
-              </svg>
-            </li>
-            <li>
-              <svg viewBox="0 0 322.031 279.031">
-                <path id="polygone5" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
-              </svg>
-            </li>
-            <li>
-              <svg width="160" height="140" viewBox="0 0 322.031 279.031">
-                <path id="polygone6" data-name="polygone" class="cls" d="M121.14,536.006L41.009,397.662l79.86-138.5,159.992-.157,80.132,138.344-79.86,138.5Z" transform="translate(-39.984 -257.984)"/>
-              </svg>
-            </li>
+            </li> -->
           </ul>
-        </nav>
       </div>
-
     </main>
     <footer>
 
