--- a/strategy.html
+++ b/strategy.html
@@ -17,8 +17,9 @@
 
     <title>Stratégie Ambition AXA</title>
 
-    <link rel="stylesheet" href="assets/css/pages/strategy.css">
-    <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
+    <!-- <link rel="stylesheet" href="assets/css/pages/strategy.css"> -->
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
 
