Corrections + amélioration pages

--- a/documents.html
+++ b/documents.html
@@ -1,17 +1,102 @@
-<!doctype html>
-<html lang="fr">
+<!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
-  <title>AXA</title>
-  <link rel="stylesheet" href="assets/css/pages/document.css">
+  <meta name="identifier-url" content="https://www.axa.com/" />
+  <meta name="title" content="AXA réinventons notre métier" />
+  <meta name="description" content="Home page AXA" />
+  <meta name="abstract" content="Home page AXA" />
+  <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
+  <meta name="author" content="me" />
+  <meta name="revisit-after" content="15" />
+  <meta name="language" content="FR" />
+  <meta name="copyright" content="© 2017 AXA" />
+  <meta name="robots" content="All" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="icon" type="image/png" href="assets/img/common/logoIcon.png" />
+  <title>AXA - réinventons notre métier</title>
+  <link rel="stylesheet" href="assets/css/common/normalize.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/js/script.js">
+
 </head>
 <body>
+  <div id="bg">
+  <header>
+    <div class="barInfo">
+      <p>En poursuivant votre navigation sur ce site, vous acceptez
+        l’utilisation de cookies pour réaliser
+        des statistiques de visites et vous proposer du contenu ciblé.
+        <span class="closeButton">
+          <svg class="cercle" xmlns="http://www.w3.org/2000/svg" width="50.996" height="50.996" viewBox="0 0 55 55">
+            <circle id="Bouton" class="cls-1" cx="27.5" cy="27.5" r="23.5"/>
+          </svg>
 
-  <!-- <header>
-  <img src="assets/img/common/logo.png" class="logo">
-  <p class="regards">regard <br>sur <br><span >2014</span></p>
-</header> -->
+          <svg class="croix"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          width="15px" height="15px">
+          <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+          d="M14.725,1.721 L1.720,14.726 L0.275,13.281 L13.279,0.276 L14.725,1.721 Z"/>
+        </svg>
+
+        <svg class="croix"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="15px" height="15px">
+        <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+        d="M1.720,0.276 L14.725,13.280 L13.280,14.725 L0.275,1.720 L1.720,0.276 Z"/>
+      </svg>
+    </span>
+  </p>
+</div>
+<div class="menu">
+
+  <!-- <p class="regards">regard <br>sur <br><span >2014</span></p> -->
+  <nav class="main-nav">
+    <input type="checkbox" class="menu-toggler" id="menu-toggler" aria-hidden="true">
+    <label for="menu-toggler" class="menu-toggler__label" aria-hidden="true">
+      <span class="menu-toggler__label__text">Menu</span>
+      <span class="menu-toggler__label__visual">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="50px" height="8px">
+        <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+        d="M0.000,0.009 L50.000,0.009 L50.000,7.694 L0.000,7.694 L0.000,0.009 Z"/>
+      </svg>
+      <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      width="50px" height="8px">
+      <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+      d="M0.000,0.162 L50.000,0.162 L50.000,7.847 L0.000,7.847 L0.000,0.162 Z"/>
+    </svg>
+    <svg
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    width="50px" height="8px">
+    <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+    d="M0.000,0.315 L50.000,0.315 L50.000,8.000 L0.000,8.000 L0.000,0.315 Z"/>
+  </svg>
+  <!-- <span></span>
+  <span></span>
+  <span></span> -->
+</span>
+</label>
+
+<ul class="main-menu">
+  <li><a href="#">Un</a></li>
+  <li><a href="#">Item</a></li>
+  <li><a href="#">De</a></li>
+  <li><a href="#">Mon</a></li>
+  <li><a href="#">Menu</a></li>
+</ul>
+</nav>
+<span class="logo"> <img src="assets/img/common/logo.png"></span>
+<span class="regards2 regards" ><span class="textR2" style="color:#e79655;">regard <br>sur <br></span> 2014</span>
+</div>
+</header>
 <main>
   <h1>documents</h1>
   <section class="Rapport">
@@ -373,12 +458,6 @@ Télécharger <span id="countFileSize"></span></button>
     <li>
       <img src="assets/img/document/docsPubli.png">
       <div class="descriptionIMG">
-<<<<<<< HEAD
-=======
-        <h4>Télécharger<br> le rapport d'activité</h4>
-
-        <span>17,6 Mo</span>
->>>>>>> 2f856080474eafd7437c833f1a020c2af4cfe855
         <a href="" class="download">
         <h4>Télécharger<br> le rapport d'activité</h4>
         <span class="taille">17,6 Mo</span>
