--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
   <meta name="copyright" content="© 2017 AXA" />
   <meta name="robots" content="All" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="icon" type="image/png" href="assets/img/common/logoIcon.png" />
   <title>AXA - réinventons notre métier</title>
   <link rel="stylesheet" href="assets/css/common/normalize.css">
-  <link rel="stylesheet" href="assets/css/pages/index.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <body>
-  <div id="bg">
+  <div id="bgIndex">
   <header>
     <div class="barInfo">
       <p>En poursuivant votre navigation sur ce site, vous acceptez
@@ -92,7 +93,7 @@
 </ul>
 </nav>
 <span class="logo"> <img src="assets/img/common/logo.png"></span>
-<span class="regards"><span class="textR">regard <br>sur <br></span> 2014</span>
+<span class="regards2 regards"><span class="textR2">regard <br>sur <br></span> 2014</span>
 </div>
 </header>
 
@@ -112,7 +113,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="185" height="160" viewBox="0 0 322.031 279.031">
           <path id="Polygone2" class="polygonSVG" d="M359.2,673.376L279.064,535.031l79.863-138.5,160-.156,80.134,138.344-79.863,138.5Z" transform="translate(-278.046 -395.359)"/>
         </svg>
-        <p>stratégie <br>Ambition AXA</p>
+        <p>histoires vécus</p>
       </span>
     </li>
     <li>
@@ -120,7 +121,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="185" height="160" viewBox="0 0 322.031 279.031">
           <path id="Polygone3" class="polygonSVG" d="M359.2,673.376L279.064,535.031l79.863-138.5,160-.156,80.134,138.344-79.863,138.5Z" transform="translate(-278.046 -395.359)"/>
         </svg>
-        <p>engagés pour  mieux protéger</p>
+        <p>stratégie <br>Ambition AXA</p>
       </span>
     </li>
     <li>
@@ -130,13 +131,13 @@
         </svg>
         <p>chiffres clés</p>
       </span>
-    </li> 
+    </li>
     <li>
       <span class="contentSVG">
         <svg xmlns="http://www.w3.org/2000/svg" width="185" height="160" viewBox="0 0 322.031 279.031">
           <path id="Polygone5" class="polygonSVG" d="M359.2,673.376L279.064,535.031l79.863-138.5,160-.156,80.134,138.344-79.863,138.5Z" transform="translate(-278.046 -395.359)"/>
         </svg>
-        <p>engagés pour  mieux protéger</p>
+        <p>documents</p>
       </span>
     </li>
     <li>
@@ -144,7 +145,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="185" height="160"  viewBox="0 0 322.031 279.031">
           <path id="Polygone6" class="polygonSVG" d="M359.2,673.376L279.064,535.031l79.863-138.5,160-.156,80.134,138.344-79.863,138.5Z" transform="translate(-278.046 -395.359)"/>
         </svg>
-        <p>chiffres clés</p>
+        <p>initiatives<br>manquantes</p>
       </span>
     </li>
 </ul>
