--- a/strategy.html
+++ b/strategy.html
@@ -1,30 +1,101 @@
 <!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="identifier-url" content="https://www.axa.com/" />
-    <meta name="title" content="AXA réinventons notre métier" />
-    <meta name="description" content="Home page AXA" />
-    <meta name="abstract" content="Home page AXA" />
-    <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
-    <meta name="author" content="lpdw" />
-    <meta name="revisit-after" content="15" />
-    <meta name="language" content="FR" />
-    <meta name="copyright" content="© 2017 AXA" />
-    <meta name="robots" content="All" />
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="identifier-url" content="https://www.axa.com/" />
+  <meta name="title" content="AXA réinventons notre métier" />
+  <meta name="description" content="Home page AXA" />
+  <meta name="abstract" content="Home page AXA" />
+  <meta name="keywords" content="AXA ASSURANCES, AXA Banque, AXA" />
+  <meta name="author" content="me" />
+  <meta name="revisit-after" content="15" />
+  <meta name="language" content="FR" />
+  <meta name="copyright" content="© 2017 AXA" />
+  <meta name="robots" content="All" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <link rel="icon" type="image/png" href="assets/img/common/logoIcon.png" />
+  <title>AXA - réinventons notre métier</title>
+  <link rel="stylesheet" href="assets/css/common/normalize.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
-    <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1.0" />
+</head>
+<body>
+  <div id="bg">
+  <header>
+    <div class="barInfo">
+      <p>En poursuivant votre navigation sur ce site, vous acceptez
+        l’utilisation de cookies pour réaliser
+        des statistiques de visites et vous proposer du contenu ciblé.
+        <span class="closeButton">
+          <svg class="cercle" xmlns="http://www.w3.org/2000/svg" width="50.996" height="50.996" viewBox="0 0 55 55">
+            <circle id="Bouton" class="cls-1" cx="27.5" cy="27.5" r="23.5"/>
+          </svg>
 
-    <title>Stratégie Ambition AXA</title>
+          <svg class="croix"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          width="15px" height="15px">
+          <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+          d="M14.725,1.721 L1.720,14.726 L0.275,13.281 L13.279,0.276 L14.725,1.721 Z"/>
+        </svg>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
-    <!-- <link rel="stylesheet" href="assets/css/pages/strategy.css"> -->
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
+        <svg class="croix"
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="15px" height="15px">
+        <path fill-rule="evenodd"  fill="rgb(255, 255, 255)"
+        d="M1.720,0.276 L14.725,13.280 L13.280,14.725 L0.275,1.720 L1.720,0.276 Z"/>
+      </svg>
+    </span>
+  </p>
+</div>
+<div class="menu">
 
-    <nav></nav>
+  <!-- <p class="regards">regard <br>sur <br><span >2014</span></p> -->
+  <nav class="main-nav">
+    <input type="checkbox" class="menu-toggler" id="menu-toggler" aria-hidden="true">
+    <label for="menu-toggler" class="menu-toggler__label" aria-hidden="true">
+      <span class="menu-toggler__label__text">Menu</span>
+      <span class="menu-toggler__label__visual">
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="50px" height="8px">
+        <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+        d="M0.000,0.009 L50.000,0.009 L50.000,7.694 L0.000,7.694 L0.000,0.009 Z"/>
+      </svg>
+      <svg
+      xmlns="http://www.w3.org/2000/svg"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      width="50px" height="8px">
+      <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+      d="M0.000,0.162 L50.000,0.162 L50.000,7.847 L0.000,7.847 L0.000,0.162 Z"/>
+    </svg>
+    <svg
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    width="50px" height="8px">
+    <path fill-rule="evenodd"  fill="rgb(36, 36, 36)"
+    d="M0.000,0.315 L50.000,0.315 L50.000,8.000 L0.000,8.000 L0.000,0.315 Z"/>
+  </svg>
+  <!-- <span></span>
+  <span></span>
+  <span></span> -->
+</span>
+</label>
 
+<ul class="main-menu">
+  <li><a href="#">Un</a></li>
+  <li><a href="#">Item</a></li>
+  <li><a href="#">De</a></li>
+  <li><a href="#">Mon</a></li>
+  <li><a href="#">Menu</a></li>
+</ul>
+</nav>
+<span class="logo"> <img src="assets/img/common/logo.png"></span>
+<span class="regards2 regards"><span class="textR2">regard <br>sur <br></span> 2014</span>
+</div>
+</header>
     <main class="strategy">
       <h1 class="title">Stratégie Ambition AXA</h1>
       <section>
